<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="clear_search">Очистить поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="back">Назад</string>
    <string name="forward">Вперед</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_url">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="share_text">Поделиться через…</string>
    <string name="email">kperederiy@yandex.ru</string>
    <string name="subject_email">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_email">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="cover">Обложка</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="network_error">Проблемы со связью</string>
    <string name="try_internet">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="retry">Обновить</string>
    <string name="history_title">Вы искали</string>
    <string name="btn_clear_history">Очистить историю</string>
    <string name="track_time">Длительность</string>
    <string name="collection_name">Альбом</string>
    <string name="release_year">Год</string>
    <string name="primary_genre_name">Жанр</string>
    <string name="country">Страна</string>
    <string name="library_empty">Ваша медиатека пуста</string>
    <string name="playlists_empty">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="tab_favourite_tracks">Избранные треки</string>
    <string name="tab_playlists">Плейлисты</string>
    <string name="name_new_playlist">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="del_playlist">Удалить плейлист</string>
</resources>