<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="0dp"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:navigationIconTint="?attr/colorOnSecondary"
        app:title="@string/settings"
        app:titleTextAppearance="@style/ToolbarTitleTextAppearance"
        app:titleTextColor="?attr/colorOnSecondary"
        android:layout_marginBottom="8dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitch"
        style="@style/AppSwitchStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dark_theme"
        android:textAppearance="@style/SettingsTextStyle"
        android:paddingVertical="16dp"
        android:paddingHorizontal="16dp"
        android:checked="false"
        android:contentDescription="@string/dark_theme" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share"
        style="@style/SettingsTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_share_24"
        android:paddingVertical="16dp"
        android:paddingHorizontal="16dp"
        android:text="@string/share"
        android:gravity="center_vertical" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/support"
        style="@style/SettingsTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_support_24"
        android:paddingVertical="16dp"
        android:paddingHorizontal="16dp"
        android:text="@string/support"
        android:gravity="center_vertical" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_agreement"
        style="@style/SettingsTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_arrow_forward_24"
        android:paddingVertical="16dp"
        android:paddingHorizontal="16dp"
        android:text="@string/user_agreement"
        android:gravity="center_vertical" />

</LinearLayout>
