<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/medium_padding"
    android:background="@color/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="24dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/medium_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:textAllCaps="false"
        android:text="@string/search"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/black"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_search_24"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:iconPadding="8dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/library"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/medium_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:textAllCaps="false"
        android:text="@string/media_library"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/black"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_library_24"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:iconPadding="8dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/medium_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:textAllCaps="false"
        android:text="@string/settings"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/black"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_settings_24"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:iconPadding="8dp"/>
</LinearLayout>