<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"

        android:background="?attr/colorPrimary"

        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:navigationIconTint="?attr/colorOnSecondary"

        app:title="@string/new_playlist"
        app:titleCentered="false"
        app:titleTextColor="?attr/colorOnSecondary"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"

        android:background="@drawable/bg_playlist_placeholder"
        android:foreground="?attr/selectableItemBackground"

        android:scaleType="centerCrop"

        app:shapeAppearanceOverlay="@style/RoundedImage8dp"

        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintDimensionRatio="1:1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        style="@style/PlaylistTextInputLayout"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"

        app:layout_constraintTop_toBottomOf="@id/cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            style="@style/PlaylistEditText"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/name_new_playlist"
            android:maxLines="1"
            android:textColor="?attr/colorOnSecondary"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionInputLayout"
        style="@style/PlaylistTextInputLayout"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"

        app:layout_constraintTop_toBottomOf="@id/nameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionEditText"
            style="@style/PlaylistEditText"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/description"
            android:textColor="?attr/colorOnSecondary"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createButton"
        style="@style/CreatePlaylistButton"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="32dp"

        android:enabled="false"
        android:text="@string/create"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>